#326 fix: Hide by sliding off screen rather than adjusting the width

--- a/services/ui/src/components/Components/FilterDrawer/FilterDrawer.module.scss
+++ b/services/ui/src/components/Components/FilterDrawer/FilterDrawer.module.scss
@@ -4,6 +4,7 @@
 .drawer {
     $drawer-width: 250px;
     $label-height: 200px;
+    $border: 1px;
 
     position: absolute;
     top: vars.$menu-height;
@@ -11,7 +12,7 @@
 
     .filter {
         position: absolute;
-        top: 0;
+        top: 2px;
         left: 0;
         display: flex;
         flex-direction: row;
@@ -19,17 +20,21 @@
         @include colours.colour("color", "filter-text");
 
         .content {
-            width: 0;
+            position: absolute;
+            top: 0;
+            left: calc(-#{$drawer-width} - 2 * #{$border});
+            width: $drawer-width;
             height: 100%;
-            min-height: calc(100vh - 2px - #{vars.$menu-height});
+            min-height: calc(100vh - 2px - 2 * #{$border} - #{vars.$menu-height});
             overflow: hidden;
             white-space: nowrap;
-            transition: 0.8s ease width;
+            transition: 0.8s ease left;
+            border: $border solid;
+            @include colours.colour("background", "background");
             @include colours.colour("border-color", "border");
 
             &.open {
-                width: $drawer-width;
-                border: 1px solid;
+                left: 0;
             }
         }
 
@@ -46,7 +51,7 @@
             @include colours.colour("background-color", "button");
             @include colours.colour("color", "text");
             outline: none;
-            border: 1px solid;
+            border: $border solid;
             border-left: 0;
             @include colours.colour("border-color", "border");
             cursor: pointer;
@@ -58,7 +63,7 @@
         }
 
         .content.open + .label {
-            left: $drawer-width;
+            left: calc(#{$drawer-width} + 2 * #{$border});
         }
 
         .content.closed:not(.all-closed) + .label {
